When height has fix value of 100vh, flex-items will wrap.

--- a/11-flex-wrapping-and-columns/style.css
+++ b/11-flex-wrapping-and-columns/style.css
@@ -34,7 +34,7 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
   flex-wrap: wrap;
   flex-direction: column;
   border: 10px solid goldenrod;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .box {
